[project]
name = "unit-test-assignment"
version = "0.1.0"
description = "Unit testing assignment for 6810110498"
authors = [{ name = "Mu-hammadfa-if Yama" }]
dependencies = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
